Fix for blinding mobile menu & ugly text in error when in dark mode

--- a/apps/website/src/app/main/navigationbar/navigationbar.component.scss
+++ b/apps/website/src/app/main/navigationbar/navigationbar.component.scss
@@ -132,7 +132,6 @@
   #header {
     width: 300px;
     background: #fff;
-    border-right: 1px solid #e6e9ec;
     left: -300px;
   }
 }
