--- a/apps/website/src/styles/bootstrap.scss
+++ b/apps/website/src/styles/bootstrap.scss
@@ -158,15 +158,7 @@
   $text-bright: white;
   background: $dark-background !important;
 
-  #cover {
-    background: $dark-background !important;
-  }
-
-  section, .form-control {
-    background: $dark-background !important;
-  }
-
-  .card, .offcanvas-body {
+  section, .form-control, #header, #cover, .card, .offcanvas-body {
     background: $dark-background !important;
   }
 
@@ -174,6 +166,7 @@
     background: $dark-background !important;
     border-color: $text-dark !important;
   }
+
   .ngx-slider .ngx-slider-bar {
     background: $text-dark !important;
   }
@@ -182,8 +175,12 @@
     color: $text-dark !important;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6, .mobile-nav-toggle fa-icon {
     color: $text-bright !important;
+  }
+
+  .alert p {
+    color: $body-color !important;
   }
 
   .nav-menu {
